--- a/src/index.html
+++ b/src/index.html
@@ -402,6 +402,76 @@
         </div>
     </section>
 
+    <section class="feedbacks">
+        <div class="container">
+            <h2 class="title">Отзывы клиентов</h2>
+            <div class="feedbacks__wrapper">
+                <div class="feedbacks__item">
+                    <div class="feedbacks__logo">
+                        <img src="img/clockSection/irina.png" alt="Irina">
+                    </div>
+                    <div class="feedbacks__info">
+                        <h3 class="feedbacks__name">Ирина Иванченко</h3>
+                        <div class="feedbacks__subtitle">2 полумарафона</div>
+                        <div class="feedbacks__descr">
+                            Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали<br>
+                            пульсометр, который подошел именно под мои цели и финансовые возможности.
+                            Через некоторе время решила обновить гаджет - не раздумывая обратилась туда же.
+                            <br>
+                            <br>
+                            Новые цели - новый гаджет!
+                            <br>
+                            <br>
+                            Спасибо, RunSmart!
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="feedbacks__item">
+                    <div class="feedbacks__logo">
+                        <img src="img/clockSection/ivan.png" alt="Ivan">
+                    </div>
+                    <div class="feedback__info">
+                        <h3 class="feedbacks__name">Иван Сёмочкин</h3>
+                        <div class="feedbacks__subtitle">1 полумарафон</div>
+                        <div class="feedbacks__descr">
+                            Крутая штука - пульсометр. Обычно без них бегал. Оказывается только хуже себе делал.
+                            Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели
+                            первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы
+                            анатомии, составили план тренировок на месяц вперёд.
+                            <br>
+                            <br>
+                            С ними подготовился к своему первому полумарафону! Спасибо!!!
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="feedbacks__item">
+                    <div class="feedbacks__logo">
+                        <img src="img/clockSection/julia.png" alt="Julia">
+                    </div>
+                    <div class="feedbacks__info">
+                        <h3 class="feedbacks__name">Юлия Дашкина</h3>
+                        <div class="feedbacks__subtitle">2 полумарафона</div>
+                        <div class="feedbacks__descr">
+                            Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось
+                            тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и
+                            решила попробовать.
+                            <br>
+                            <br>
+                            Позвонила, ребята поинтересовались моими целями и подобрали очень интересный
+                            вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2
+                            полумарафона и несколько более коротких забегов и не намерена останавливаться!
+                            <br>
+                            <br>
+                            Спасибо!!!
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
