--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="header__contacts">
                     <a href="tel:+74999228974" class="header__phone">+7(499)922-89-74</a>
-                    <button class="button">Заказать звонок</button>
+                    <button data-modal="consultation" class="button">Заказать звонок</button>
                 </div>
 
             </header>
@@ -49,7 +49,7 @@
                     </div>
                 </div>
 
-                <button class="button button_main">Заказать консультацию</button>
+                <button data-modal="consultation" class="button button_main">Заказать консультацию</button>
                 <div class="promo__link">
                     или
                     <a href="#">Перейти в каталог</a>
@@ -122,7 +122,7 @@
                 Просто заполните форму заявки<br>
                 и мы перезвоним вам в течении 10 минут:
             </div>
-            <form class="feed-form" action="#">
+            <form id="consultation-form" class="feed-form" action="#">
                 <input name="name"  required placeholder="Ваше имя" type="text">
                 <input name="phone"  required placeholder="Ваш телефон" type="number">
                 <input name="email"  required placeholder="Ваш E-mail" type="email">
@@ -242,7 +242,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                          <img src="img/clockSection/polarSmall.png" alt="pulsonem" class="catalog-item__img">
-                         <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                         <div class="catalog-item__subtitle">Пульсометр Polar FT5</div>
                          <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                          <a href="#" class="catalog-item__link">Подробнее</a>
                         </div>
@@ -282,7 +282,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                          <img src="img/clockSection/polarSmall.png" alt="pulsonem" class="catalog-item__img">
-                         <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                         <div class="catalog-item__subtitle">Пульсометр Polar FT12</div>
                          <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                          <a href="#" class="catalog-item__link">Подробнее</a>
                         </div>
@@ -472,9 +472,58 @@
         </div>
     </section>
 
+   <footer class="footer">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d333.63731703061353!2d37.646739668460626!3d55.76830969869226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2sMyasnitskiy%20Proyezd%2C%204%2F3%2C%20Moskva%2C%20Russia%2C%20107078!5e0!3m2!1sen!2sby!4v1596052278247!5m2!1sen!2sby" width="100%" height="630" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
+        <div class="footer__info">
+            <address class="footer__addr">Москва, Мясницкий проезд, д. 3с1</address>
+            <a class="footer__phone" href="375292934196">+375 (29) 293 41 96</a>
+            <div class="footer__social">
+                <a href="#" class="footer__social-item"><img src="icons/facebook.svg" alt="facebook"></a>
+                <a href="#" class="footer__social-item"><img src="icons/instagram.svg" alt="instagram"></a>
+                <a href="#" class="footer__social-item"><img src="icons/pinterest.svg" alt="pinterest"></a>
+            </div>
+        </div>
+   </footer> 
+
+   <div class="overlay">
+       <div class="modal" id="consultation">
+           <div class="modal__close">&times;</div>
+           <div class="modal__subtitle">Просто заполните форму заявки</div>
+           <div class="modal__descr">и мы вам перезвоним в течении 10 минут.</div>
+           <form class="feed-form feed-form_mt25" action="#">
+                <input name="name" placeholder="Ваше имя" type="text">
+                <input name="phone" placeholder="Ваш телефон" type="number">
+                <input name="email" placeholder="Ваш E-mail" type="email">
+
+                <button class="button button_submit">Заказать консультацию</button>
+            </form>
+       </div>
+
+       <div class="modal" id="order">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle">Ваш заказ</div>
+            <div class="modal__descr">Пульсометр Соня-1</div>
+            <form class="feed-form feed-form_mt25" action="#">
+                <input name="name"  required placeholder="Ваше имя" type="text">
+                <input name="phone"  required placeholder="Ваш телефон" type="number">
+                <input name="email"  required placeholder="Ваш E-mail" type="email">
+
+                <button class="button button_submit">Купить</button>
+            </form>
+        </div>
+
+        <div class="modal modal_mini" id="thanks">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle">Спасибо за вашу заявку</div>
+            <div class="modal__descr">Пульсомет Соня-1</div>
+        </div>
+   </div>
+
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/script.js"></script>  
 </body>
 </html>
